# mpi-learning

./: .gitignore  CMakeLists.txt  helllo_world.cpp  hello_world2.cpp  main.cpp
chapter3/: CMakeLists.txt  mpi_odd_even.cpp  mpi_trap1.cpp  mpi_vector_add.cpp
chapter4-pthreads/: CMakeLists.txt  pth_hello.c
chapter5-OpenMP/: CMakeLists.txt  omp_hello.c
